current SVN version

version 1.1.2 (2011-02-28)
	Fixed bug in orthographic projection matrix when in portrait mode
	Added Isgl3dFpsDisplay to utils
	Added Xcode project template for iSGL3D application
	Added tutorials to included tests and added simple augmented reality test
	Updated bullet physics library to 2.77

version 1.1.1 (2011-02-01)
	Open source release.
	Moved pvr tools to external folder and moved importers and physics back to isgl3d classes. Include bullet physics library.
	Added MIT license to all files.
	Remove internal headers and watermark/license

version 1.1.0 (2010-09-13)
	GLView no longer performs the animation (allowing users more control): drawView must be called at each frame.

version 1.0.12 (2010-09-08)
	Added Isgl3dLog: use instead of NSLog.
	Add categories for internal API of isgl3d.
	Handle license keys for iSGL3D. Display watermark if key not ok.
	Watermark appears then disappears for 60 seconds.
	All code documentation finished.

version 1.0.11 (2010-07-21)
	Refactoring: - All classes now prefixed by Isgl3d.

version 1.0.10 (2010-07-07)
	Add boolean "interactive" to Node so that only certain, user-specified elements are rendered for capturing touch events.
	Fix build-and-analyze bug.
	Stencil buffer using packed depth/stencil buffer for iOS4. If not available use separate buffers.

version 1.0.9 (2010-06-19)
	Add optional cutoff tilt angle for rotation value with Accelerometer: Very sensitive rotation at low tilt angles.
	Remove need to specify compressed images files: looks simply for pvr extension.
	Addition of MiniVec3D, a pure c struct with associated c functions for manipulation. The objective is to improve performance and avoid creation of thousands of vector objects.
	Performance improvements: initialise mesh data arrays (FloatArray, UShortArray) with specific sizes calculated by each primitive. Reduce number of Matrix4D creations.